Fix cut off content in landscape mode

--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,8 @@ body {
   display: flex;
   place-items: center;
   min-width: 375px;
-  max-height: 100vh;
+  height: 100%;
+  min-height: 90vh;
 }
 
 h1 {
